[gd_scene load_steps=8 format=2]

[ext_resource path="res://Cenas/Main_Certa.gd" type="Script" id=1]
[ext_resource path="res://Fontes/FonteJogo.tres" type="DynamicFont" id=2]
[ext_resource path="res://Label_Memory_Lane.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 49.1487, 21.0885 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48.4337, 19.5012 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50.3864, 19.5012 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 526.298, 94.7742 )

[node name="Node2D" type="Node2D"]
light_mask = -2147483648
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.839216, 0.945098, 0.984314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
margin_top = 277.0
margin_right = 1024.0
margin_bottom = 323.0
custom_constants/separation = 150
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_left = 207.0
margin_right = 299.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 208, -32 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.996078, 0.247059, 0.933333, 1 )
custom_colors/font_color_hover = Color( 0.290196, 0.290196, 0.290196, 1 )
text = "FÁCIL"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Facil" type="Area2D" parent="CanvasLayer/VBoxContainer/Button"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/VBoxContainer/Button/Facil"]
position = Vector2( 45.2409, 18.2551 )
shape = SubResource( 1 )

[node name="Button2" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_left = 449.0
margin_right = 555.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 208, -32 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.996078, 0.592157, 0.0235294, 1 )
custom_colors/font_color_hover = Color( 0.290196, 0.290196, 0.290196, 1 )
text = "MÉDIO"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medio" type="Area2D" parent="CanvasLayer/VBoxContainer/Button2"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/VBoxContainer/Button2/Medio"]
position = Vector2( 55.559, 19.0488 )
shape = SubResource( 2 )

[node name="Button3" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_left = 705.0
margin_right = 816.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 208, -32 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.290196, 0.290196, 0.290196, 1 )
text = "DIFÍCIL"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dificil" type="Area2D" parent="CanvasLayer/VBoxContainer/Button3"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/VBoxContainer/Button3/Dificil"]
position = Vector2( 57.1464, 18.2551 )
shape = SubResource( 3 )

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 230.0
margin_right = 782.0
margin_bottom = 277.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" parent="CanvasLayer/VBoxContainer2" instance=ExtResource( 3 )]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 509, -92 )
shape = SubResource( 4 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 509, 695.555 )
shape = SubResource( 4 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( 1118.74, 323 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2( -93.1924, 323 )
rotation = 1.5708
shape = SubResource( 4 )
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="area_entered" from="CanvasLayer/VBoxContainer/Button/Facil" to="." method="_on_Facil_area_entered"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="area_entered" from="CanvasLayer/VBoxContainer/Button2/Medio" to="." method="_on_Medio_area_entered"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="area_entered" from="CanvasLayer/VBoxContainer/Button3/Dificil" to="." method="_on_Dificil_area_entered"]
